[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[metadata]
name = fibonacci
description = find the fibonacci
author = Swati Verma
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
packages = 
	fibonacci
install_requires = 
	requests>=2
python_requires = >=3.6
package_dir = 
	=src
zip_safe = no

[options.extras_require]
testing = 
	pytest>=6.0
	pytest-cov>=2.0
	mypy>=0.910
	flake8>=3.9
	tox>=3.24

[options.package_data]
fibonacci = py.typed

[flake8]
max-line-length = 160

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize =
    {major}.{minor}.{patch}-{release}
    {major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = prod
first_value = dev
values =
    dev
    prod

[bumpversion:file:src/fibonacci/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'
